--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,6 +42,8 @@ h1, h2, p, a, .text {
 	border: 1px solid black;
 	border-radius: 20px;
 	float: left;
+	background-color:#e0e0e0; 
+	color: black;
 }
 .blog_entry {
 	margin: 20px;
