--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -52,8 +52,9 @@ h1, h2, p, a, .text {
 	min-height: 300px;
 	height: auto;
 	max-height: 800px;
+	min-width: 20%;
 	width: 500px;
-	max-width: calc( 100% - 40px );
+	max-width: 100%;
 	border: 1px solid black;
 	border-radius: 20px;
 	float: left;
