--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,7 +24,8 @@ h1, h2, p, a, .text {
 	
 	height: auto;
 	margin-top: 10px;
-	margin-left: 20px;
+	margin-left: 15px;
+	margin-right: 15px;
 	border-bottom: 1px solid black;
 	border-top: 1px solid black;
 	cursor: pointer;
